--- a/idex.html
+++ b/idex.html
@@ -15,7 +15,7 @@
         </div>
     </div>
     <div class="topnav">
-        <a href="home.html">Home</a>
+        <a href="idex.html">Home</a>
         <a href="CompanyProfile.html">Company Profile</a>
         <a href="employees.html">Employees</a>
         <a href="CurrentVacancies.html">Current Vacancies</a>
@@ -64,4 +64,5 @@
 
 </body>
 </html>
+
 
