--- a/WorkForUs.html
+++ b/WorkForUs.html
@@ -16,7 +16,7 @@
         </div>
     </div>
     <div class="topnav">
-        <a href="home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="CompanyProfile.html">Company Profile</a>
         <a href="Employees.html">Employees</a>
         <a href="CurrentVacancies.html">Current Vacancies</a>
@@ -97,4 +97,5 @@
 
 
 </body>
+
 </html>
