--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
     </div>
     <div class="topnav">
-        <a href="idex.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="CompanyProfile.html">Company Profile</a>
         <a href="employees.html">Employees</a>
         <a href="CurrentVacancies.html">Current Vacancies</a>
@@ -64,5 +64,6 @@
 
 </body>
 </html>
+
 
 
