--- a/CompanyProfile.html
+++ b/CompanyProfile.html
@@ -15,7 +15,7 @@
         </div>
     </div>
     <div class="topnav">
-        <a href="home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="CompanyProfile.html">Company Profile</a>
         <a href="employees.html">Employees</a>
         <a href="CurrentVacancies.html">Current Vacancies</a>
@@ -70,4 +70,5 @@
     </table>
 
 </body>
+
 </html>
