--- a/WorkForUs.html
+++ b/WorkForUs.html
@@ -18,7 +18,7 @@
     <div class="topnav">
         <a href="index.html">Home</a>
         <a href="CompanyProfile.html">Company Profile</a>
-        <a href="Employees.html">Employees</a>
+        <a href="employees.html">Employees</a>
         <a href="CurrentVacancies.html">Current Vacancies</a>
         <a href="WorkForUs.html">Work For Us!</a>
         <a href="UsefulLinks.html">Useful Links</a>
@@ -99,3 +99,4 @@
 </body>
 
 </html>
+
